# wallbox_control

./: .gitignore  Dockerfile  compose.yaml  main.py  modbus.py  pyproject.toml  stuff.md  wallbox.py  webserver.py
src/wallbox/: main.py  wallbox.py  webserver.py
src/wallbox_control/: __init__.py  error_handling.py  limits.py  main.py  modbus.py  wallbox.py  webserver.py
tests/: test_controller.py  test_limits.py  test_modbus.py  test_wallbox.py
